--- a/package.json
+++ b/package.json
@@ -1,19 +1,53 @@
 {
   "name": "shivam-portfolio",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
   "dependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "babel-loader": "^9.2.1",
-    "html-webpack-plugin": "^5.6.3",
+    "js-tokens": "^4.0.0",
+    "picocolors": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1",
-    "typed.js": "^2.1.0",
-    "web-vitals": "^4.2.4",
-    "webpack": "^5.98.0",
-    "webpack-dev-server": "^5.2.0"
+    "react-router-dom": "^6.16.0",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles-basic": "^2.12.0",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-interaction-external-attract": "^2.12.0",
+    "tsparticles-interaction-external-bounce": "^2.12.0",
+    "tsparticles-interaction-external-bubble": "^2.12.0",
+    "tsparticles-interaction-external-connect": "^2.12.0",
+    "tsparticles-interaction-external-grab": "^2.12.0",
+    "tsparticles-interaction-external-pause": "^2.12.0",
+    "tsparticles-interaction-external-push": "^2.12.0",
+    "tsparticles-interaction-external-remove": "^2.12.0",
+    "tsparticles-interaction-external-repulse": "^2.12.0",
+    "tsparticles-interaction-external-slow": "^2.12.0",
+    "tsparticles-interaction-particles-attract": "^2.12.0",
+    "tsparticles-interaction-particles-collisions": "^2.12.0",
+    "tsparticles-interaction-particles-links": "^2.12.0",
+    "tsparticles-move-base": "^2.12.0",
+    "tsparticles-move-parallax": "^2.12.0",
+    "tsparticles-particles.js": "^2.12.0",
+    "tsparticles-plugin-easing-quad": "^2.12.0",
+    "tsparticles-shape-circle": "^2.12.0",
+    "tsparticles-shape-image": "^2.12.0",
+    "tsparticles-shape-line": "^2.12.0",
+    "tsparticles-shape-polygon": "^2.12.0",
+    "tsparticles-shape-square": "^2.12.0",
+    "tsparticles-shape-star": "^2.12.0",
+    "tsparticles-shape-text": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
+    "tsparticles-updater-color": "^2.12.0",
+    "tsparticles-updater-life": "^2.12.0",
+    "tsparticles-updater-opacity": "^2.12.0",
+    "tsparticles-updater-out-modes": "^2.12.0",
+    "tsparticles-updater-rotate": "^2.12.0",
+    "tsparticles-updater-size": "^2.12.0",
+    "tsparticles-updater-stroke-color": "^2.12.0"
+  },
+  "devDependencies": {
+    "@babel/code-frame": "^7.26.2",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
