--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "tsparticles-updater-out-modes": "^2.12.0",
     "tsparticles-updater-rotate": "^2.12.0",
     "tsparticles-updater-size": "^2.12.0",
-    "tsparticles-updater-stroke-color": "^2.12.0"
+    "tsparticles-updater-stroke-color": "^2.12.0",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "@babel/code-frame": "^7.26.2",
