--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
   "name": "shivam-portfolio",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": true,
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-toast": "^1.2.13",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.12.1",
     "js-tokens": "^4.0.0",
+    "lucide-react": "^0.511.0",
     "picocolors": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-tsparticles": "^2.12.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "tsparticles-basic": "^2.12.0",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-interaction-external-attract": "^2.12.0",
@@ -44,11 +60,14 @@
     "tsparticles-updater-rotate": "^2.12.0",
     "tsparticles-updater-size": "^2.12.0",
     "tsparticles-updater-stroke-color": "^2.12.0",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/code-frame": "^7.26.2",
-    "react-scripts": "^5.0.1"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.17"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,6 +78,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
